# graph_framework

./: CMakeLists.txt  CMakeSettings.json  README.md
Old Code/: filter_node.h  processor_node.h
graph/: CMakeLists.txt  CMakeSettings.json  combine_node.cpp  combine_node.h  config.h  dynamic_join_node.cpp  dynamic_join_node.h  filter_node.h  framework.cpp  framework.hpp  graph.cpp  graph.h  graph_end_node.h  node.h  proccessor_node.h  processor_node.h  splitter_node.cpp  splitter_node.h  start_node.h  type_config.h
src/: graph_framework.cpp  graph_framework.h
test/: CMakeLists.txt  filter_testing.cpp  filter_testing.h  nodeTesting.h  test.cpp  testMath.cpp  testMath.h  test_contruction.cpp  test_contruction.h
